--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -2,16 +2,21 @@ name: Post welcome comment
 on:
   pull_request:
     types: [opened]
+
 permissions:
   pull-requests: write
 
-            - name: First interaction
-  uses: actions/first-interaction@v1.3.0
-  with:
-    # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
-    repo-token: 
-    # Comment to post on an individual's first issue
-    issue-message: # optional
-    # Comment to post on an individual's first pull request
-    pr-message: # optional
-          
+jobs:
+  welcome-comment:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: First interaction
+        uses: actions/first-interaction@v1.3.0
+        with:
+          # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
+         # repo-token: ${{ secrets.GITHUB_TOKEN }}
+          # Comment to post on an individual's first issue
+          issue-message: "Welcome to the repository! We're happy to have you here!" # optional
+          # Comment to post on an individual's first pull request
+          pr-message: "Thanks for your first pull request! We'll review it soon." # optional
